--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-    "name": "notion-pdf-saver",
+    "name": "notion-pdf-auto-saver",
     "version": "1.0.0",
-    "description": "",
-    "scripts": {},
+    "description": "Notion PDF Saver Extension & Backend",
+    "scripts": {
+        "start": "micro"
+    },
     "dependencies": {
         "html2canvas": "^1.4.1",
-        "jspdf": "^2.5.1"
+        "jspdf": "^2.5.1",
+        "googleapis": "^126.0.1",
+        "micro": "^9.3.4",
+        "micro-cors": "^0.1.1"
     }
 }
